initial edits to the astrowind template for my personal site.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,8 +21,15 @@ const metadata = {
     <Fragment slot="title"> About Us </Fragment>
 
     <Fragment slot="subtitle">
-      We're passionate about helping entrepreneurs, startups, and small business owners utilize technology in a way that
-      actually solves problems instead of just adding to the already complex business and technology landscape.
+      My passion above all else is in sharing the love of Jesus with anyone and everyone. 
+        My God has been so overwhelmingly gracious to me that my only response is to share that love with others.
+      
+        Over the last few years, I've been diving deep into these topics listed below.
+        I consider the Great Commission to be my life's task, and Disciple Making Movements are the vehicle through which we can see it fulfilled!
+        My secondary passion is small business.
+        I have learned a lot from my brothers overseas, specifically in Rwanda, Africa.
+        What I have learned is that it is possible to bring the Kingdom of God into the world through small businesses and the networks they create.
+        I am so excited to see what God has planned in bringing His Kingdom to my city through DMMs and Kingdom-minded small businesses.
     </Fragment>
   </Hero>
 
