added blog post and fixed pages to refect accurate stuff]

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,7 +68,7 @@ const metadata = {
         callToAction: {
           target: '_blank',
           text: 'Home Service Industry',
-          href: '#',
+          href: '/blog',
         },
       },
       {
@@ -76,7 +76,7 @@ const metadata = {
         callToAction: {
           target: '_blank',
           text: 'Sales & Marketing',
-          href: '#',
+          href: '/blog',
         },
       },
       {
@@ -84,7 +84,7 @@ const metadata = {
         callToAction: {
           target: '_blank',
           text: 'Disciple Making Movements',
-          href: '#',
+          href: '/category/dmm',
         },
       },
     ]}
