--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,30 +14,12 @@ const metadata = {
   <Features2
     columns={3}
     items={[
-      {
-        title: 'Call Us',
-        description: '(913) 535-0555',
-        icon: 'tabler:phone',
-        href: 'tel:913-535-0555',
-      },
-      {
-        title: 'Email Evan',
-        description: 'evan@triplicategroup.com',
-        icon: 'tabler:mail',
-        href: 'mailto:evan@triplicategroup.com',
-      },
+
       {
         title: 'Email Cayden',
         description: 'cayden@triplicategroup.com',
         icon: 'tabler:mail',
         href: 'mailto:cayden@triplicategroup.com',
-      },
-      {
-        title: 'Meet With Evan',
-        description:
-          "I am based in Kansas City and available to meet over coffee. Feel free to put a meeting on my calendar and let's talk in person!",
-        icon: 'tabler:map-pin',
-        href: 'https://fantastical.app/evanharmon',
       },
     ]}
   />
@@ -48,32 +30,24 @@ const metadata = {
     columns={3}
     items={[
       {
-        title: "Evan's Website",
-        description: 'evanharmon.com',
-        href: 'https://evanharmon.com',
+        title: "Sommer Lawn's Website",
+        description: 'sommerlawn.com',
+        href: 'https://sommerlawn.com',
       },
       {
-        title: "Cayden's Website",
-        description: 'caydensommer.com',
-        href: 'https://caydensommer.com',
+        title: "H&M's Website",
+        description: 'hmholidaylighting.com',
+        href: 'https://hmholidaylighting.com',
       },
       {
-        title: 'LinkedIn',
-        description: 'evanharmon1',
-        href: 'https://www.linkedin.com/in/evanharmon1',
-        icon: 'tabler:brand-linkedin',
+        title: "KC Underground",
+        description: 'kcunderground.org',
+        href: 'https://kcunderground.org',
       },
       {
-        title: 'GitHub',
-        description: 'Triplicate-Group',
-        href: 'https://github.com/evanharmon1',
-        icon: 'tabler:brand-github',
-      },
-      {
-        title: 'Meetup',
-        description: 'KC Tech Enthusiasts',
-        href: 'https://meetup.com/kctechbookclub/',
-        icon: 'tabler:brand-meetup',
+        title: "Awaken KC",
+        description: 'kcunderground.org/awaken',
+        href: 'https://kcunderground.org/awaken',
       },
     ]}
   />
